# pawn

./: .gitignore  CLAUDE.md  ENHANCED_PLAYER_MANAGEMENT.md  FORMATTING.md  PAIRING_TEST_GUIDE.md  PIPELINE_OPTIMIZATION.md  README.md  SECURITY_BADGES_FIX.md  badge-status-report.json  coverage-report.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test_enhanced_players.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  (+1 more)
src-tauri/: Cargo.toml  benchmark_results.json  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/benches/: pairing_performance.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init_schemas.up.sql  0002_add_players_games.down.sql  0002_add_players_games.up.sql  0003_add_tournament_settings.down.sql  0003_add_tournament_settings.up.sql  0004_add_rounds_management.down.sql  0004_add_rounds_management.up.sql  0005_add_bye_player.down.sql  0005_add_bye_player.up.sql  0006_enhance_game_results.down.sql  0006_enhance_game_results.up.sql  0007_enhance_player_management.down.sql  0007_enhance_player_management.up.sql  0008_fix_migration_sequence.down.sql  0008_fix_migration_sequence.up.sql  0009_add_knockout_tournaments.down.sql  0009_add_knockout_tournaments.up.sql  0010_add_time_controls.down.sql  0010_add_time_controls.up.sql  0011_add_advanced_tournament_settings.down.sql  0011_add_advanced_tournament_settings.up.sql  0011_enhance_round_states.up.sql  0012_add_player_seeding.down.sql  0012_add_player_seeding.up.sql  0013_enhance_round_states.down.sql  0014_add_team_tournaments.down.sql  0014_add_team_tournaments.up.sql  0015_add_application_settings.down.sql  0015_add_application_settings.up.sql
src-tauri/permissions/pawn/: add-player-rating-history.toml  add-player-to-team.toml  advance-knockout-winners.toml  approve-game-result.toml  assign-player-to-category.toml  batch-update-results.toml  bulk-import-players.toml  calculate-team-standings.toml  complete-round.toml  create-knockout-bracket.toml  create-next-round.toml  create-pairings-as-games.toml  create-player-category.toml  create-player-enhanced.toml  create-player.toml  create-round.toml  create-team-lineup.toml  create-team-match.toml  create-team-tournament-settings.toml  create-team.toml  create-time-control.toml  create-tournament.toml  default.toml  delete-player-category.toml  delete-player.toml  delete-team.toml  delete-time-control.toml  delete-tournament.toml  export-tournament-data.toml  game-result-management.toml  generate-knockout-pairings.toml  generate-pairings.toml  generate-team-pairings.toml  get-all-team-memberships.toml  get-application-setting.toml  get-application-settings.toml  get-available-export-formats.toml  get-bracket-positions-by-round.toml  get-bracket-positions.toml  get-current-round.toml  (+66 more)
src-tauri/resources/configs/: config.toml  theme_dark.toml
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/pawn/: mod.rs  state.rs
src-tauri/src/pawn/command/: export.rs  game_result.rs  knockout.rs  mod.rs  norm_calculation.rs  player.rs  round.rs  seeding.rs  settings.rs  team.rs  test_summary.md  time_control.rs  tournament.rs
src-tauri/src/pawn/common/: constants.rs  error.rs  types.rs
src-tauri/src/pawn/db/: mod.rs  sqlite.rs
src-tauri/src/pawn/domain/: dto.rs  mod.rs  model.rs  tiebreak.rs
src-tauri/src/pawn/service/: export.rs  knockout.rs  manual_pairing.rs  mod.rs  norm_calculation.rs  pairing.rs  pairing_optimizer.rs  player.rs  realtime_standings.rs  round.rs  round_history.rs  round_robin_analysis.rs  round_robin_pairing.rs  seeding.rs  settings.rs  swiss_analysis.rs  swiss_pairing.rs  team.rs  team_pairing.rs  team_scoring.rs  tiebreak.rs  time_control.rs  tournament.rs  validation.rs
src-tauri/src/pawn/templates/: classic.css  default.css  minimal.css  professional.css
src-tauri/src/pawn/test/: mock_db.rs
src-tauri/tests/: integration.rs
(+208 files in other folders)
