[package]
name = "pawn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri = { version = "2", features = [] }
tauri = { version = "2.5.1", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = "0.4"
ts-rs = "11.0.1"
# specta = "=2.0.0-rc.22"
specta = { version = "2.0.0-rc.20", features = ["serde", "serde_json"] }
specta-typescript = "0.0.9"
# tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-specta = { version = "2.0.0-rc.17", features = ["derive", "typescript"] }
tauri-utils = "2.4.0"
uuid = { version = "1.17.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "uuid",
    "time",
    "runtime-tokio",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
