[package]
name = "pawn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
default-run = "pawn"

[[bin]]
name = "pawn"
path = "src/main.rs"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = "0.4"
async-trait = "0.1"
ts-rs = "11.0.1"
specta = { version = "2.0.0-rc.22", features = ["serde", "serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-utils = "2.4.0"
uuid = { version = "1.17.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "uuid", 
    "time",
    "runtime-tokio",
    "macros",
    "migrate",
], default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
rand = "0.8"
csv = "1.3"
tokio = { version = "1.0", features = ["full"] }
# Export functionality
printpdf = "0.8"
rust_xlsxwriter = "0.89"
# Settings system dependencies
serde_yaml = "0.9"

[dev-dependencies]
# Core testing framework
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.13"

# Database testing  
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Performance testing
criterion = "0.6"

# Additional testing utilities
serial_test = "3.0"  # For serializing database tests
once_cell = "1.19"   # For test setup
rstest = "0.25"      # Parameterized tests
futures = "0.3"      # For async utilities in tests
chrono = "0.4"       # For date/time utilities in tests

# Security dependency overrides
crossbeam-channel = "0.5.15"

# Override unmaintained crates with maintained alternatives
# paste is unmaintained, but we can't easily replace it as it's used by specta
# For now, we acknowledge the risk and will monitor for alternatives
# proc-macro-error has newer maintained versions
proc-macro-error = "1.0.4"  # Keep current version until dependencies update

# glib has unsound Iterator implementation - will be fixed in GTK4 migration
# For now we acknowledge the advisory but keep current version as required by Tauri

# Benchmark configuration
[[bench]]
name = "pairing_performance"
harness = false
